# src/app/api/models.ts
@@ -1,3 +1,6 @@
-export { CreateAccountRequest } from './models/create-account-request';
-export { CreateTransferRequest } from './models/create-transfer-request';
-export { TransferType } from './models/transfer-type';
+export { AccountResponse as AccountApiAccountResponse } from './models/AccountApi/account-response';
+export { CreateAccountRequest as FinancialPortfolioApiGatewayContractsAccountsRequestsCreateAccountRequest } from './models/FinancialPortfolio/APIGateway/Contracts/Accounts/Requests/create-account-request';
+export { TransferType as FinancialPortfolioApiGatewayContractsEquityEnumsTransferType } from './models/FinancialPortfolio/APIGateway/Contracts/Equity/Enums/transfer-type';
+export { CreateTransferRequest as FinancialPortfolioApiGatewayContractsEquityRequestsCreateTransferRequest } from './models/FinancialPortfolio/APIGateway/Contracts/Equity/Requests/create-transfer-request';
+export { TransferResponse as TransferApiTransferResponse } from './models/TransferApi/transfer-response';
+export { TransferType as TransferApiTransferType } from './models/TransferApi/transfer-type';
