# src/app/api/models/AccountApi/account-response.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface AccountResponse {
+  createdDateTime?: null | string;
+  description?: null | string;
+  name?: null | string;
+  userId?: null | string;
+}
