# src/app/api/models/FinancialPortfolio/APIGateway/Contracts/Equity/Requests/create-transfer-request.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+import { TransferType as FinancialPortfolioApiGatewayContractsEquityEnumsTransferType } from '../../../../../FinancialPortfolio/APIGateway/Contracts/Equity/Enums/transfer-type';
+export interface CreateTransferRequest {
+  amount?: number;
+  dateTime?: null | string;
+  type?: FinancialPortfolioApiGatewayContractsEquityEnumsTransferType;
+}
