# src/app/api/models/TransferApi/transfer-response.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+import { TransferType as TransferApiTransferType } from '../TransferApi/transfer-type';
+export interface TransferResponse {
+  amount?: number;
+  dateTime?: null | string;
+  type?: TransferApiTransferType;
+}
