# src/app/api/models/create-transfer-request.ts
@@ -1,8 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-import { TransferType } from './transfer-type';
-export interface CreateTransferRequest {
-  amount?: number;
-  dateTime?: null | string;
-  type?: TransferType;
-}
