# src/app/api/services/accounts.service.ts
@@ -9,7 +9,8 @@ import { RequestBuilder } from '../request-builder';
 import { Observable } from 'rxjs';
 import { map, filter } from 'rxjs/operators';
 
-import { CreateAccountRequest } from '../models/create-account-request';
+import { AccountResponse as AccountApiAccountResponse } from '../models/AccountApi/account-response';
+import { CreateAccountRequest as FinancialPortfolioApiGatewayContractsAccountsRequestsCreateAccountRequest } from '../models/FinancialPortfolio/APIGateway/Contracts/Accounts/Requests/create-account-request';
 
 @Injectable({
   providedIn: 'root',
@@ -34,19 +35,19 @@ export class AccountsService extends BaseService {
    * This method doesn't expect any request body.
    */
   apiAccountsGet$Response(params?: {
-  }): Observable<StrictHttpResponse<void>> {
+  }): Observable<StrictHttpResponse<Array<AccountApiAccountResponse>>> {
 
     const rb = new RequestBuilder(this.rootUrl, AccountsService.ApiAccountsGetPath, 'get');
     if (params) {
     }
 
     return this.http.request(rb.build({
-      responseType: 'text',
-      accept: '*/*'
+      responseType: 'json',
+      accept: 'application/json'
     })).pipe(
       filter((r: any) => r instanceof HttpResponse),
       map((r: HttpResponse<any>) => {
-        return (r as HttpResponse<any>).clone({ body: undefined }) as StrictHttpResponse<void>;
+        return r as StrictHttpResponse<Array<AccountApiAccountResponse>>;
       })
     );
   }
@@ -58,10 +59,10 @@ export class AccountsService extends BaseService {
    * This method doesn't expect any request body.
    */
   apiAccountsGet(params?: {
-  }): Observable<void> {
+  }): Observable<Array<AccountApiAccountResponse>> {
 
     return this.apiAccountsGet$Response(params).pipe(
-      map((r: StrictHttpResponse<void>) => r.body as void)
+      map((r: StrictHttpResponse<Array<AccountApiAccountResponse>>) => r.body as Array<AccountApiAccountResponse>)
     );
   }
 
@@ -77,7 +78,7 @@ export class AccountsService extends BaseService {
    * This method sends `application/*+json` and handles request body of type `application/*+json`.
    */
   apiAccountsPost$Response(params?: {
-    body?: CreateAccountRequest
+    body?: FinancialPortfolioApiGatewayContractsAccountsRequestsCreateAccountRequest
   }): Observable<StrictHttpResponse<void>> {
 
     const rb = new RequestBuilder(this.rootUrl, AccountsService.ApiAccountsPostPath, 'post');
@@ -103,7 +104,7 @@ export class AccountsService extends BaseService {
    * This method sends `application/*+json` and handles request body of type `application/*+json`.
    */
   apiAccountsPost(params?: {
-    body?: CreateAccountRequest
+    body?: FinancialPortfolioApiGatewayContractsAccountsRequestsCreateAccountRequest
   }): Observable<void> {
 
     return this.apiAccountsPost$Response(params).pipe(
