# src/app/api/services/transfers.service.ts
@@ -9,7 +9,8 @@ import { RequestBuilder } from '../request-builder';
 import { Observable } from 'rxjs';
 import { map, filter } from 'rxjs/operators';
 
-import { CreateTransferRequest } from '../models/create-transfer-request';
+import { CreateTransferRequest as FinancialPortfolioApiGatewayContractsEquityRequestsCreateTransferRequest } from '../models/FinancialPortfolio/APIGateway/Contracts/Equity/Requests/create-transfer-request';
+import { TransferResponse as TransferApiTransferResponse } from '../models/TransferApi/transfer-response';
 
 @Injectable({
   providedIn: 'root',
@@ -34,19 +35,19 @@ export class TransfersService extends BaseService {
    * This method doesn't expect any request body.
    */
   apiTransfersGet$Response(params?: {
-  }): Observable<StrictHttpResponse<void>> {
+  }): Observable<StrictHttpResponse<Array<TransferApiTransferResponse>>> {
 
     const rb = new RequestBuilder(this.rootUrl, TransfersService.ApiTransfersGetPath, 'get');
     if (params) {
     }
 
     return this.http.request(rb.build({
-      responseType: 'text',
-      accept: '*/*'
+      responseType: 'json',
+      accept: 'application/json'
     })).pipe(
       filter((r: any) => r instanceof HttpResponse),
       map((r: HttpResponse<any>) => {
-        return (r as HttpResponse<any>).clone({ body: undefined }) as StrictHttpResponse<void>;
+        return r as StrictHttpResponse<Array<TransferApiTransferResponse>>;
       })
     );
   }
@@ -58,10 +59,10 @@ export class TransfersService extends BaseService {
    * This method doesn't expect any request body.
    */
   apiTransfersGet(params?: {
-  }): Observable<void> {
+  }): Observable<Array<TransferApiTransferResponse>> {
 
     return this.apiTransfersGet$Response(params).pipe(
-      map((r: StrictHttpResponse<void>) => r.body as void)
+      map((r: StrictHttpResponse<Array<TransferApiTransferResponse>>) => r.body as Array<TransferApiTransferResponse>)
     );
   }
 
@@ -77,7 +78,7 @@ export class TransfersService extends BaseService {
    * This method sends `application/*+json` and handles request body of type `application/*+json`.
    */
   apiTransfersPost$Response(params?: {
-    body?: CreateTransferRequest
+    body?: FinancialPortfolioApiGatewayContractsEquityRequestsCreateTransferRequest
   }): Observable<StrictHttpResponse<void>> {
 
     const rb = new RequestBuilder(this.rootUrl, TransfersService.ApiTransfersPostPath, 'post');
@@ -103,7 +104,7 @@ export class TransfersService extends BaseService {
    * This method sends `application/*+json` and handles request body of type `application/*+json`.
    */
   apiTransfersPost(params?: {
-    body?: CreateTransferRequest
+    body?: FinancialPortfolioApiGatewayContractsEquityRequestsCreateTransferRequest
   }): Observable<void> {
 
     return this.apiTransfersPost$Response(params).pipe(
